// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoListItem Component renders properly 1`] = `
<Link
  className="video-list-item col-xl-3 col-lg-4 col-md-6 col-sm-6"
  replace={false}
  to="/watch?v=undefined"
>
  <div
    className="card"
  >
    <ProgressiveImage
      placeholder={null}
      src="https://i.ytimg.com/vi/b6hoBp7Hk-A/default.jpg"
    />
    <div
      className="card-body"
    >
      <h5
        className="card-title"
      >
        Video Title
      </h5>
      <p
        className="card-info"
      >
         - 
        <TimeAgo
          component="time"
          formatter={[Function]}
          live={true}
          maxPeriod={Infinity}
          minPeriod={0}
          now={[Function]}
        />
         - 
      </p>
    </div>
  </div>
</Link>
`;

exports[`VideoListItem Component renders properly if video prop is also empty 1`] = `
<Link
  className="video-list-item col-xl-3 col-lg-4 col-md-6 col-sm-6"
  replace={false}
  to="/watch?v=undefined"
>
  <div
    className="card"
  >
    <div
      className="card-body"
    >
      <h5
        className="card-title"
      />
      <p
        className="card-info"
      >
         - 
        <TimeAgo
          component="time"
          formatter={[Function]}
          live={true}
          maxPeriod={Infinity}
          minPeriod={0}
          now={[Function]}
        />
         - 
      </p>
    </div>
  </div>
</Link>
`;
